# EduCloud-OS

./: README.md
core/: .gitignore  CMakeLists.txt  bankers.cpp  bankers.h  browserapp.cpp  browserapp.h  calculatorapp.cpp  calculatorapp.h  contextmenumanager.cpp  contextmenumanager.h  desktop.cpp  desktop.h  filesystemapp.cpp  filesystemapp.h  job.c  job.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  memorymanager.cpp  memorymanager.h  processtable.cpp  processtable.h  queue.c  queue.h  scheduler.cpp  scheduler.h  snakegameapp.cpp  snakegameapp.h  systemmonitor.cpp  systemmonitor.h  taskmanagerapp.cpp  taskmanagerapp.h
